# condorcam-tower

./: .gitignore  README.md  requirements.txt
deploy/: bootstrap_pi.sh  install_service.sh
deploy/systemd/: tower.service
firmware/pico/: CMakeLists.txt  main_UART.c  main_USB.c  main_oldquad.c  pico_quad_serial.uf2  quadrature.pio
pi_runtime/: Driver_Class.py  Encoder_Class.py  Event_Class.py  State.py  Tower_Class.py  Utils.py  main.py
pi_runtime/Archive/: Driver_Class.py  Encoder_Class.py  Tower_Class.py  main.py
tests/: Driver_Init_Test.py  Encoder_Test.py  RC_Controller_Test.py
tests/Archive/operational/: PID_Testing.py  README.md
tests/operational/: Controller_Functional_Test.py  Driver_Functional_Test.py  Encoder_Functional_Test.py  Full_Functional_Test.py  Input_Functional_Test.py  PID_Testing.py
tests/scripts/: AF160_Driver_Test.py  AF160_Encoder_Test.py  CH3_Test.py  CH4_Test.py  CH5_Test.py  Driver_Class_Test.py  E5_Encoder_Test.py  E5_with_Pico_Test.py  Encoder_Class_Test.py  Encoder_State_Test.py  Encoder_Test.py  Encoder_Test_Standalone.py  Motor_Driver_Test.py  Pico_USB_Test.py  RC_Controller_Channel_Test.py  RC_Controller_Steering_Test.py  RC_Controller_Throttle_Test.py  RC_Controller_Throttle_Troubleshooting.py  Zero_Switch_Test.py  bit_test.py  button_test.py  ch5-6_test.py  encoder_and_button.py  pico_uart_test.py  pwm_test.py  towerless_test.py
tools/updater/: Download_Tower_Logs.py  Upload_Tower_Files.py  log_analyzer.py  ssh_utils.py
